--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
-    "ethers": "^5.5.1",
     "blake-hash": "^2.0.0",
-    "blake2b": "^2.1.3",
-    "ffjavascript": "^0.2.39"
+    "ethers": "^5.5.1",
+    "ffjavascript": "git+ssh://git@github.com/DCMMC/ffjavascript.git"
   }
 }
