--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   "dependencies": {
     "blake-hash": "^2.0.0",
     "ethers": "^5.5.1",
-    "ffjavascript": "git+ssh://git@github.com/DCMMC/ffjavascript.git"
+    "ffjavascript": "git+https://github.com/DCMMC/ffjavascript.git"
   }
 }
